# plugin-python-rpc-pickle

./: README.md
python-client-plugin/: README.md  pyproject.toml
python-client-plugin/dhexample/rpc_pickle_client/: __init__.py
python-server-plugin/: README.md  pyproject.toml
python-server-plugin/dhexample/rpc_pickle_server/: __init__.py  plugin.py
